--- a/views/user/changepassword2.ejs
+++ b/views/user/changepassword2.ejs
@@ -51,13 +51,13 @@
             </a>
           </li>
           <li>
-            <a href="#" class="flex items-center text-gray-700 hover:text-indigo-600">
+            <a href="/wallet" class="flex items-center text-gray-700 hover:text-indigo-600">
               <i class="fas fa-wallet mr-3 w-5"></i>
               <span>My Wallet</span>
             </a>
           </li>
           <li>
-            <a href="#" class="flex items-center text-gray-700 hover:text-indigo-600">
+            <a href="/wishlist" class="flex items-center text-gray-700 hover:text-indigo-600">
               <i class="fas fa-heart mr-3 w-5"></i>
               <span>My Wishlist</span>
             </a>
