--- a/views/user/productdetails.ejs
+++ b/views/user/productdetails.ejs
@@ -505,7 +505,9 @@
 
 
 </body>
-<%-include("../../views/partials/user/footer")-%>
+ <footer class="bg-indigo-900 text-white mt-12">
+        <%-include("../../views/partials/user/footer")-%>
+    </footer>
     <script>
 
         document.addEventListener('DOMContentLoaded', function () {
