--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -78,7 +78,7 @@
             </li>
             <li>
               <a
-                href="#"
+                href="/wallet"
                 class="flex items-center text-gray-700 hover:text-indigo-600"
               >
                 <i class="fas fa-wallet mr-3 w-5 text-gray-600"></i>
