--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -32,7 +32,7 @@
         <a href="/user-profile" class="hover:text-blue-600 transition">
           <i class="fas fa-user text-lg"></i>
         </a>
-        <a href="#" class="hover:text-blue-600 transition">
+        <a href="/wishlist" class="hover:text-blue-600 transition">
           <i class="fas fa-heart text-lg"></i>
         </a>
         <a href="/cart" class="hover:text-blue-600 relative transition">
