about us page added

--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -44,7 +44,7 @@
       <div class="flex items-center space-x-6 sm:space-x-8 lg:space-x-10 text-gray-700 font-medium text-sm sm:text-base whitespace-nowrap">
         <a href="/" class="hover:text-blue-600 transition">Home</a>
         <a href="/products-user" class="hover:text-blue-600 transition">Products</a>
-        <a href="#" class="hover:text-blue-600 transition">About Us</a>
+        <a href="/aboutPage" class="hover:text-blue-600 transition">About Us</a>
         
 
         <% if(!user) { %>
